force-app/main/default/objects/Assessment__c/fields/Rationale_for_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Rationale_for_Assessment__c</fullName>
    <label>Rationale for Assessment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>